Fixed card alignment

--- a/src/components/Deck/styles.module.css
+++ b/src/components/Deck/styles.module.css
@@ -1,13 +1,13 @@
 .deck {
   grid-area: 1 / 1;
 
-  width: 300px;
-  height: 200px;
+  width: 100%;
+  height: 100%;
   will-change: transform;
 
-  /* display: flex;
+  display: flex;
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
 }
 
 .deck > div {
